--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ p {
               color: #c8413e;
             }
           }
-          .chart-container {
+          .chart-container-cover {
             margin-top: 15px;
 
             .tabs-btns {
@@ -320,12 +320,21 @@ p {
                 white-space: nowrap;
                 border: none;
                 outline: none;
+                cursor: pointer;
+                &:hover {
+                  box-shadow: 1px 0px 2px 0px #0000001a;
+                }
               }
             }
 
             .chart {
-              height: 320px;
+              height: 270px;
+              padding: 40px 70px 20px 70px;
               background: #f1f3ff;
+
+              #barChart {
+                height: 100% !important;
+              }
             }
           }
         }
